// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

option csharp_namespace = "Microsoft.ESDV.CloudConnector.Azure.GrpcService";

package azure_cloud_connector;

service AzureCloudConnector {
    rpc UpdateDigitalTwin (UpdateDigitalTwinRequest) returns (UpdateDigitalTwinResponse);
}

message UpdateDigitalTwinRequest {
    string model_id = 1;
    string instance_id = 2;
    string instance_property_path = 3;
    string data = 4;
}

message UpdateDigitalTwinResponse {
    string reply = 1;
}